--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,6 +65,6 @@ db {
 
 slick.dbs.default.profile="slick.jdbc.PostgresProfile$"
 slick.dbs.default.db.driver="org.postgresql.Driver"
-slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/postgres"
+slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/example"
 slick.dbs.default.db.user="postgres"
 slick.dbs.default.db.password="postgres"
