--- a/conf/application.conf
+++ b/conf/application.conf
@@ -62,7 +62,7 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
-
+play.filters.disabled+=play.filters.csrf.CSRFFilter
 slick.dbs.default.profile="slick.jdbc.PostgresProfile$"
 slick.dbs.default.db.driver="org.postgresql.Driver"
 slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/postgres"
