--- a/conf/application.conf
+++ b/conf/application.conf
@@ -68,3 +68,4 @@ slick.dbs.default.db.driver="org.postgresql.Driver"
 slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/postgres"
 slick.dbs.default.db.user="postgres"
 slick.dbs.default.db.password="postgres"
+upload.directory = "C:/Users/audrius.naujokas/uploads"
